# harmony-digital-cmo

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
api/harmony/: [...path].py
apps/api/: package.json  tsconfig.json
apps/api/src/: agentFlow.ts  bootstrap.ts  cmoEngine.ts  compliance.ts  config.ts  db.ts  logger.ts  main.ts  observability.ts  openaiClient.ts  pipeline.ts  policies.ts  queue.ts  repository.ts  scheduler.ts  sources.ts  tokenBudget.ts  websiteAnalysis.ts  workers.ts
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AppShell.tsx  CompetitiveBenchmarkDashboard.tsx  ModuleLandingView.tsx  SearchPalette.tsx
apps/web/lib/: agentIntelligence.ts  api.ts  backendBaseUrl.ts  benchmarkTypes.ts  colors.ts  displayLabels.ts  intelligenceOutput.ts  moduleBenchmarkExport.ts  moduleFallbacks.ts  moduleRoutes.ts  nav.ts
infra/: docker-compose.yml
services/ai-workers/: package.json  pyproject.toml
services/ai-workers/src/: __init__.py  brand_guardrail.py  connectors.py  models.py  orchestrator.py  worker.py
services/api-fastapi/: __init__.py  agents.py  config.py  hybrid_fallback.py  intelligence_service.py  main.py  models.py  module_sections_market.py  openai_client.py  package.json  repositories.py  requirements.txt  research_context.py  services.py  trends_google.py
services/api-fastapi/scripts/: smoke_openapi.py
services/api-fastapi/tests/: test_actions_persistence.py  test_auth.py  test_dashboard.py  test_intelligence.py
(+21 files in other folders)
